# Dedalus-MCP-Server-Example

./: .gitignore  README.md  main.py  pyproject.toml  setup.py  setup.sh  test_server.py
config/: .env.example
docs/: getting-started.md
docs/guides/: agent-handoffs.md  deployment.md
examples/: client.py  workflows.py
src/: main.py  server.py
tests/: test_rate_limit.py  test_server.py
